display data added

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,7 @@
 .app {
   text-align: center;
   height: 100%;
+  overflow: auto;
   background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('https://r10.ieee.org/bombay-cs/wp-content/uploads/sites/99/supply-chain-network-applications-multi-party-networks-5.jpg');
   background-repeat: no-repeat;
   background-size: cover;
