--- a/client/src/components/Home.css
+++ b/client/src/components/Home.css
@@ -5,6 +5,7 @@
     height: 100%;
     color: white;
     padding: 0%;
+    font-size: large;
     /* border: 10px solid black */
   }
 
@@ -12,7 +13,7 @@
     text-align: center;
     font-size: xx-large;
     height: max-content;
-    padding: 6%;
+    padding-top: 5%;
     font-weight: bold;
     /* margin-top: 2px; */
     /* border: 10px solid; */
